--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -105,6 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:visibility="gone" />
 
 </android.support.design.widget.CoordinatorLayout>
