--- a/app/src/main/res/layout/activity_upload_c_v.xml
+++ b/app/src/main/res/layout/activity_upload_c_v.xml
@@ -95,6 +95,13 @@
                 android:clickable="false"
                 android:fadingEdge="horizontal|vertical"
                 android:isScrollContainer="true" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone" />
         </RelativeLayout>
     </android.support.design.widget.CollapsingToolbarLayout>
 </android.support.constraint.ConstraintLayout>
